Make sure titles in dropdown wrap

--- a/app/styles/bookmarklet.styl
+++ b/app/styles/bookmarklet.styl
@@ -116,6 +116,10 @@ placeholder(inherit);
     background: $backgroundGray;
     padding: 0;
     border: 0;
+
+    a {
+      white-space: normal;
+    }
   }
 }
 
@@ -354,7 +358,6 @@ placeholder(inherit);
   .item-title {
     font-size: $baseFontSize;
     font-weight: bold;
-    word-wrap: break-word;
     color: $darkTextColor;
     padding-right: ($unit / 2);
 
